Fix HiDPI card scaling with multi-resolution icons and quality downscaling. Clean up redundant view image/preload handling and unnecessary Graphics2D usage.